--- a/src/app/css/index.css
+++ b/src/app/css/index.css
@@ -1,7 +1,17 @@
+:root {
+      --base: #ffc600;
+      --spacing: 10px;
+      --blur: 10px;
+			--background-color: #0E648E;
+			--url: url('../images/welcome/001.jpg');
+			--z-index: 1, 2, 3;
+    }
+
 .body {
 	margin: 0 !important;
 	padding: 0 !important;
 }
+
 .element {
 	height:700px;
 	background-color: #ededed;
@@ -30,6 +40,10 @@
 
 .element.welcome, .active.welcome{
 	background-color: #FEB769;
+}
+
+.element.welcome {
+	/*background-image: url('../images/welcome/002.jpg')*/
 }
 
 .element.where, .active.where{
