--- a/src/app/css/index.css
+++ b/src/app/css/index.css
@@ -6,13 +6,16 @@
 			--height: 700px;
       --welcome-bg-color: #FEB769;
       --welcome-color: #0E4458;
+      --where-bg-color: #0E4458;
+      --progrma-bg-color: #A6291C;
       --max-width-inside: 10px;
     }
 
 body {
 	margin: 0 !important;
 	padding: 0 !important;
-  min-width: 771px !important;
+  min-width: 770px !important;
+  overflow-x: hidden;
 }
 
 h1{
@@ -35,42 +38,64 @@ p{
 	height:var(--height);
 	position:relative;
   z-index:0;
-	/*background-color: #0E648E;*/
 	width: 100%;
 	display: inline-block;
 	padding: 0;
-	/*background-image: url('../images/welcome/002.jpg')*/
 }
 
 
 
 .background-image {
-	max-height: var(--height);
-	max-width: 100%;
+  text-align: center;
   margin: 0;
   padding: 0;
 	position:absolute;
 	width: 100%;
-  opacity: 0.8;
-  /*height: 700px;*/
+  /*opacity: 0.8;*/
   z-index: -1;
 }
 
-.title{
-  margin: 10em 5em;
-  padding: 0.1em;
-  max-width: var(--max-width-inside);
-  /*background-color: var(--welcome-bg-color);*/
+img{
+  object-fit:cover;
+  min-height: var(--height);
+  max-width: 100%;
+  opacity: 0.8;
+  transition: opacity 0.5 linear;
+
 }
 
+.example-enter {
+  opacity: 0.01;
+}
 
+.example-enter.example-enter-active {
+  opacity: 1;
+  transition: opacity 500ms ease-in;
+}
+
+.example-leave {
+  opacity: 1;
+}
+
+.example-leave.example-leave-active {
+  opacity: 0.01;
+  transition: opacity 300ms ease-in;
+}
+
+section{
+  margin: 1em;
+}
+
+.title{
+  margin: 10em 5em 5em;
+  padding: 0.1em;
+  max-width: var(--max-width-inside);
+}
 
 
 .welcome h1{
   color: var(--welcome-bg-color);
 }
-
-
 
 section .welcome{
   margin-left: 50%;
@@ -79,15 +104,6 @@ section .welcome{
   color: #ffe;
   opacity: 0.9;
 }
-
-
-
-
-
-section{
-  margin: 1em;
-}
-
 
 
 .active {
@@ -114,10 +130,23 @@ section{
 }
 
 .element.where, .active.where{
-	background-color: #0E4458;
+	background-color: var(--where-bg-color);
 }
 
-.element.where > div{
+.where h1{
+  color: var(--where-bg-color);
+}
+
+section .where{
+  margin-left: 30%;
+  max-width: 70%;
+  background-color: var(--where-bg-color);
+  color: #ffe;
+  opacity: 0.8;
+}
+
+
+/*.element.where > div{
 	background-color: blue;
 	width: 100px;
 	color:red;
@@ -126,6 +155,10 @@ section{
 
 .element.where > div:hover{
 	width: 1000px;
+}*/
+
+.program h1{
+  color: #A6291C;
 }
 
 .element.program, .active.program{
