--- a/src/app/css/index.css
+++ b/src/app/css/index.css
@@ -17,15 +17,15 @@ body {
 	margin: 0 !important;
 	padding: 0 !important;
   overflow-x: hidden;
-  background: #eee;
+  background: var(--welcome-bg-color);
 }
 
 nav{
-  max-width: 1400px;
+  max-width: 1280px;
 }
 
 .onepager, nav{
-  max-width: 1400px;
+  max-width: 1280px;
   margin: 0 auto;
   border-radius: 2px;
   box-shadow: 1px 3px 5px rgba(0,0,0,0.2);
@@ -49,7 +49,7 @@ p{
 }
 
 .element {
-	height:var(--height);
+	height: var(--height);
 	position:relative;
   z-index:0;
 	width: 100%;
@@ -57,10 +57,15 @@ p{
 	padding: 0;
 }
 
+.element.welcome {
+  padding-top: 48px;
+}
+
 
 
 .background-image {
   text-align: center;
+  height: var(--height);
   margin: 0;
   padding: 0;
 	position:absolute;
@@ -87,7 +92,8 @@ img{
 }*/
 
 .title{
-  margin: 10em 0.2em 1em 6em;
+  /*margin: 10em 0.2em 1em 6em;*/
+  margin: 5%;
   padding: 0.2em;
   max-width: 35%;
   /*max-width: var(--max-width-inside);*/
@@ -100,8 +106,9 @@ img{
 }
 
 section .welcome{
-  margin-left: 50%;
-  max-width: 50%;
+  margin-left: 45%;
+  max-width: 55%;
+  max-height: var(--height);
   background-color: var(--welcome-bg-color);
   color: #ffe;
   opacity: 0.9;
@@ -137,6 +144,18 @@ section .welcome{
 
 .where h1{
   color: var(--where-bg-color);
+}
+
+.images h1{
+  color: var(--welcome-bg-color);
+}
+
+section .images{
+  margin: 20%;
+  max-width: 75%;
+  background-color: var(--welcome-bg-color);
+  color: #ffe;
+  opacity: 0.8;
 }
 
 section .where{
@@ -230,6 +249,10 @@ section .gift{
 
 .element.gift, .active.gift{
 	background-color: var(--food-bg-color);
+}
+
+.element.images, .active.images{
+	background-color: var(--welcome-bg-color);
 }
 
 .element.info, .active.info{
